k8configs/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developer-iq-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: developer-iq-app
  template:
    metadata:
      labels:
        app: developer-iq-app
    spec:
      containers:
      - name: developer-iq-app
        image: 414238480542.dkr.ecr.ap-south-1.amazonaws.com/k8s-cicd-node-js:TAG_PLACEHOLDER
        ports:
        - containerPort: 5000
