k8configs/services.yml
apiVersion: v1
kind: Service
metadata:
  name: developer-iq-app-service
spec:
  selector:
    app: developer-iq-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
